@@ -20,19 +20,14 @@ import org.jetbrains.annotations.Nullable;
 import org.labkey.api.query.ExprColumn;
 import org.labkey.api.query.SchemaKey;
 import org.labkey.api.query.UserSchema;
-import org.labkey.api.util.Pair;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.EnumSet;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 /**
  * Exposes a Java enum as a virtual query table. Useful for creating lookups when it's really a hard-coded list
  * of possible values that the code needs to match up against exactly. 
- * User: jeckels
- * Date: Jun 2, 2008
 */
 public class EnumTableInfo<EnumType extends Enum<EnumType>> extends VirtualTable<UserSchema>
 {
@@ -181,21 +176,21 @@ public class EnumTableInfo<EnumType extends Enum<EnumType>> extends VirtualTable
     }
 
     @Override
-    public @NotNull Map<String, Pair<IndexType, List<ColumnInfo>>> getAllIndices()
+    public @NotNull List<IndexDefinition> getAllIndices()
     {
-        Map<String, Pair<IndexType, List<ColumnInfo>>> indices = new HashMap<>();
-        indices.put("pk_rowId", Pair.of(IndexType.Primary, Arrays.asList(getColumn("RowId"))));
-        indices.putAll(getUniqueIndices());
+        List<IndexDefinition> indices = new ArrayList<>();
+        indices.add(new IndexDefinition("pk_rowId", IndexType.Primary, List.of(getColumn("RowId")), null));
+        indices.addAll(getUniqueIndices());
         return indices;
     }
 
     @NotNull
     @Override
-    public Map<String, Pair<IndexType, List<ColumnInfo>>> getUniqueIndices()
+    public List<IndexDefinition> getUniqueIndices()
     {
-        Map<String, Pair<IndexType, List<ColumnInfo>>> indices = new HashMap<>();
-        indices.put("uq_value", Pair.of(IndexType.Unique, Arrays.asList(getColumn("Value"))));
-        indices.put("uq_oridinal", Pair.of(IndexType.Unique, Arrays.asList(getColumn("Ordinal"))));
+        List<IndexDefinition> indices = new ArrayList<>();
+        indices.add(new IndexDefinition("uq_value", IndexType.Unique, List.of(getColumn("Value")), null));
+        indices.add(new IndexDefinition("uq_ordinal", IndexType.Unique, List.of(getColumn("Ordinal")), null));
         return indices;
     }
 }
